@@ -28,8 +28,8 @@ exec tkscid "$0" "$@"
 ############################################################
 
 # Alter the version if any patches have been made to the Tcl code only:
-set scidVersion "3.6.25"
-set scidVersionDate "Sept 2008"
+set scidVersion "3.6.26"
+set scidVersionDate "DEV 2009"
 
 # Set to 0 before releasing, so some alpha-state code is not included
 # Set to 1 to have access to all code
